# Python-Course-for-Beginners

./: .gitignore  CONTRIBUTING.md  FINAL_CLEANUP_SUMMARY.md  Important_links.md  LICENSE  MIGRATION_GUIDE.md  README.md  REORGANIZATION_SUMMARY.md  demo_a.txt  demo_rp.txt  demo_w.txt  requirements.txt  test.txt
File_handling/: advanced_file.ipynb  binary_file.ipynb  config.pkl  csv_class.ipynb  dataframes.ipynb  employees.csv  employees_cleaned.csv  input.txt  inventory.csv  scores.tsv  users.csv
Number_Systems/: number_system.py
Understanding_print/: Basic_print_methods.py  class_logs  class_on_print.ipynb  temp.c  temp.py
_minted-dbms/: 0462482BD628561DB29653507A6B73D72231CA65F8AD38B0F42781D3D2FC81F4.pygtex  0CA41447AA1BC013CEEFBF1D7720B5D02231CA65F8AD38B0F42781D3D2FC81F4.pygtex  0D4E2C8806C80C8EAA71F6429CDDC3122231CA65F8AD38B0F42781D3D2FC81F4.pygtex  0F20CF662301197F48EE03F4929DAD582231CA65F8AD38B0F42781D3D2FC81F4.pygtex  1AA6661CF959CA46F2C7235245384B652231CA65F8AD38B0F42781D3D2FC81F4.pygtex  1B581EEBF4ED87B0320FC032E5F3E3BF2231CA65F8AD38B0F42781D3D2FC81F4.pygtex  1BF16745846C79E45342D289FC614DE9502EBB5FCE35506DD3C1CD36ABD6D7F2.pygtex  21788593C1AB9CC9B5179DD8A18001712231CA65F8AD38B0F42781D3D2FC81F4.pygtex  2600694C6364AAF8BD947FCC6FCEC5632231CA65F8AD38B0F42781D3D2FC81F4.pygtex  300D2687494C1F05F032D65AF27DDBB72231CA65F8AD38B0F42781D3D2FC81F4.pygtex  323CFC14C786114863AB67E1BF25FA7D2231CA65F8AD38B0F42781D3D2FC81F4.pygtex  33E7B1661CEF80A5A6B5D77C3C004AE02231CA65F8AD38B0F42781D3D2FC81F4.pygtex  3EAFE1BE1C07B751868993CCB1715ACC2231CA65F8AD38B0F42781D3D2FC81F4.pygtex  4D0C4308D5C2D754E9FBD38BFBC63838502EBB5FCE35506DD3C1CD36ABD6D7F2.pygtex  5BB3D3BE9AA165B77E33BA38871CBF2B2231CA65F8AD38B0F42781D3D2FC81F4.pygtex  (+21 more)
a_complete_tictactoe/: objecttives.md
course_materials/06_advanced_topics/environment_management/examples/basic_project/: main.py  pyproject.toml
course_materials/06_advanced_topics/environment_management/examples/uv_project_example/: pyproject.toml
(+255 files in other folders)
