[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basic-project"
version = "0.1.0"
description = "A basic Python project example"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Student", email = "student@example.com"},
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "click>=8.0.0",
    "rich>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
]

[project.scripts]
basic-cli = "basic_project.cli:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"